servicemesh/circuitbreaking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: circuitbreaking
spec:
  gateways:
  - samplemesh-gateway
  hosts:
  - '*'
  http:
  - name: primary                                
    route:
    - destination:
        host: sample-client-workload          
        port:
          number: 8080
        subset: workload
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuitbreaking
spec:
  host: sample-client-workload
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
  subsets:
  - name: workload   
    labels:        
      app: sample-client-workload
      version: 1.0.1
