servicemesh/faultinjection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: faultinjection
spec:
  gateways:
  - samplemesh-gateway
  hosts:
  - '*'
  http:
  - name: primary                                
    fault:
      delay:
        fixedDelay: 3s
        percentage:
          value: 50
    route:
    - destination:
        host: sample-client-workload          
        port:
          number: 8080
      weight: 100
