servicemesh/mirroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mirroring
spec:
  gateways:
  - samplemesh-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: sample-client-workload          
        port:
          number: 8080
      weight: 100
    mirror:                           
        host: sample-client2-workload          
        port:
          number: 8080
    mirrorPercentage:
      value: 100.0
