servicemesh/requesttimeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-service
spec:
  hosts:
  - sample-service-workload
  http:
  - name: primary                                
    route:
    - destination:
        host: sample-service-workload          
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: requesttimeout
spec:
  gateways:
  - samplemesh-gateway
  hosts:
  - '*'
  http:
  - name: primary                                
    fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 100
    route:
    - destination:
        host: sample-client-workload          
        port:
          number: 8080
      weight: 100
    timeout: 3s
