servicemesh/trafficshifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trafficshifting
spec:
  gateways:
  - samplemesh-gateway
  hosts:
  - '*'
  http:
  - name: primary                                
    route:
    - destination:
        host: sample-client-workload          
        port:
          number: 8080
      weight: 50
    - destination:
        host: sample-client2-workload          
        port:
          number: 8080
      weight: 50
